# xss-shield

./: .readthedocs.yaml  README.md  pyproject.toml
.github/workflows/: python-app.yml
docs/: requirements.txt
docs/source/: conf.py  index.md
examples/: example.ipynb
src/xss_shield/: __init__.py
test/: test_escape.py
